Basic layout fixes, enabled word-wrap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,7 @@
 .message {
   padding: 20px 0;
   border-bottom: 1px solid #eee;
+  word-wrap: break-word;
 }
 
 .message img {
